an initial step for creating a classes infra on the client.

--- a/BooksServer/resources/views/home.html
+++ b/BooksServer/resources/views/home.html
@@ -3,6 +3,8 @@
     <title>Book library</title>
     <script src="lib/jquery-2.0.3.min.js"></script>
     <script src="js/bookClient.js"></script>
+    <script src="js/utils/define.js"></script>
+    <script src="js/views/view.js"></script>
     <script>
         function init() {
             $("#searchButton").on('click', function() {
