Improved class building and definition

--- a/BooksServer/resources/views/home.html
+++ b/BooksServer/resources/views/home.html
@@ -5,6 +5,8 @@
     <script src="js/bookClient.js"></script>
     <script src="js/utils/define.js"></script>
     <script src="js/views/view.js"></script>
+
+    <script src="js/components/dog.js"></script>
     <script>
         function init() {
             $("#searchButton").on('click', function() {
