--- a/BooksServer/resources/views/home.html
+++ b/BooksServer/resources/views/home.html
@@ -36,8 +36,7 @@
         "bookClient.js",
         "views/view.js",
         "components/animal.js",
-        "components/dog.js",
-        "components/person.js"
+        "components/dog.js"
     ], function() {
         setTimeout(init, 500) ;
     }) ;
