fixed the initialization of the server

--- a/BooksServer/resources/views/home.html
+++ b/BooksServer/resources/views/home.html
@@ -1,8 +1,9 @@
+<!DOCTYPE html>
 <html>
 <head>
     <title>Book library</title>
     <script src="lib/jquery-2.0.3.min.js"></script>
-    <script src="concat-app.js"></script>
+    <script src="concat-app.out.js"></script>
     <script>
         function init() {
             getAllBooks() ;
@@ -30,5 +31,6 @@
 
     <div id="results"></div>
 
+<script>init()</script>
 </body>
 </html>
