Added minification to the aggregated JS application.

--- a/BooksServer/resources/views/home.html
+++ b/BooksServer/resources/views/home.html
@@ -3,7 +3,7 @@
 <head>
     <title>Book library</title>
     <script src="lib/jquery-2.0.3.min.js"></script>
-    <script src="concat-app.out.js"></script>
+    <script src="app.min.js"></script>
     <script>
         function init() {
             getAllBooks() ;
