Creation of the first generated View skeleton.

--- a/BooksServer/resources/views/home.html
+++ b/BooksServer/resources/views/home.html
@@ -5,14 +5,7 @@
     <script src="lib/jquery-2.0.3.min.js"></script>
     <script src="app.min.js"></script>
     <script>
-        function init() {
-            getAllBooks() ;
 
-            $("#searchButton").on('click', function() {
-                var bookName = $("#bookNameToSearch").val() ;
-                getBook(bookName) ;
-            }) ;
-        }
     </script>
 </head>
 <body>
@@ -30,6 +23,8 @@
     </div>
 
     <div id="results"></div>
+
+    <div id="main"></div>
 
 <script>init()</script>
 </body>
