--- a/BooksServer/resources/views/home.html
+++ b/BooksServer/resources/views/home.html
@@ -3,9 +3,14 @@
 <head>
     <title>Book library</title>
     <script src="lib/jquery-2.0.3.min.js"></script>
-    <script src="app.min.js"></script>
     <script>
-
+        var app = document.createElement("script") ;
+        if(window.location.search.indexOf("debug=true") >= 0) {
+            app.src = "app.js" ;
+        } else {
+            app.src = "app.min.js" ;
+        }
+        document.head.appendChild(app) ;
     </script>
 </head>
 <body>
@@ -19,7 +24,5 @@
     </div>
 
     <div id="main"></div>
-
-<script>init()</script>
 </body>
 </html>
