adding an initial lending book dialog

--- a/BooksServer/resources/views/home.html
+++ b/BooksServer/resources/views/home.html
@@ -16,13 +16,9 @@
 <body>
     <div>
         <h1>List of all available books</h1>
-        <div id="allBooks">
-            <ul id="availableBooksList">
-
-            </ul>
-        </div>
     </div>
 
     <div id="main"></div>
+    <div id="dialogs"></div>
 </body>
 </html>
