sorting out the view of the dialogs data

--- a/BooksServer/resources/views/home.html
+++ b/BooksServer/resources/views/home.html
@@ -3,6 +3,7 @@
 <head>
     <title>Book library</title>
     <script src="lib/jquery-2.0.3.min.js"></script>
+    <link rel="stylesheet" href="css/app.css">
     <script>
         var app = document.createElement("script") ;
         if(window.location.search.indexOf("debug=true") >= 0) {
