added an overlay when showing dialog

--- a/BooksServer/resources/views/home.html
+++ b/BooksServer/resources/views/home.html
@@ -20,6 +20,8 @@
     </div>
 
     <div id="main"></div>
-    <div id="dialogs"></div>
+    <div id="dialogs" class="hidden">
+        <div class="veil"></div>
+    </div>
 </body>
 </html>
