--- a/BooksServer/resources/views/css/app.css
+++ b/BooksServer/resources/views/css/app.css
@@ -2,3 +2,28 @@ body {
     background: orange ;
 }
 
+.veil {
+    position: fixed ;
+    width: 100% ;
+    height: 100% ;
+    top: 0px ;
+    left: 0px ;
+    opacity: 0.5 ;
+    background: black ;
+}
+
+.hidden {
+    display: none ;
+}
+
+.button {
+    border: 2px darkgray solid ;
+    box-shadow: 5px 5px 5px rgba(0,0,0,0.5) ;
+    width: 80px ;
+    background-color: silver ;
+    padding: 2px ;
+}
+
+.button:HOVER {
+
+}
