--- a/BooksServer/resources/views/home.html
+++ b/BooksServer/resources/views/home.html
@@ -19,7 +19,8 @@
         <h1>List of all available books</h1>
     </div>
 
-    <div id="main"></div>
+    <div id="content"></div>
+    <div id="mainToolbar"></div>
     <div id="dialogs" class="hidden">
         <div class="veil"></div>
     </div>
