Tweaking background and margins

--- a/BooksServer/resources/views/css/app.css
+++ b/BooksServer/resources/views/css/app.css
@@ -1,5 +1,9 @@
 body {
-    background: orange ;
+    background: orange;
+    background-image: url("../imgs/books-bg.png");
+    background-attachment: fixed;
+    background-repeat: no-repeat;
+    background-position: 50% 0%;
 }
 
 .veil {
