Moving the login bar to a view class.

--- a/BooksServer/resources/views/home.html
+++ b/BooksServer/resources/views/home.html
@@ -21,27 +21,14 @@
         </script>
     </head>
 <body>
-    <div id="login">
-            <span id="signinButton">
-              <span
-                      class="g-signin"
-                      data-callback="signInCB"
-                      data-clientid="941749687344-4okcp9qcufe6gsiucekm7qqfmfljk545.apps.googleusercontent.com"
-                      data-cookiepolicy="single_host_origin"
-                      data-requestvisibleactions="http://schemas.google.com/AddActivity"
-                      data-scope="https://www.googleapis.com/auth/plus.login">
-              </span>
-            </span>
-
-        <a id="logoutButton" href="#" class="hidden">Logout</a>
-    </div>
-
     <div>
         <h1>List of all available books</h1>
     </div>
 
     <div id="content"></div>
-    <div id="mainToolbar"></div>
+    <div id="mainToolbar">
+        <div id="login"></div>
+    </div>
     <div id="dialogs" class="hidden">
         <div class="veil"></div>
     </div>
