--- a/BooksServer/resources/views/home.html
+++ b/BooksServer/resources/views/home.html
@@ -21,17 +21,6 @@
         </script>
     </head>
 <body>
-    <div>
-        <h1>List of all available books</h1>
-    </div>
-
-    <div id="mainToolbar">
-        <div id="login"></div>
-    </div>
-    <div id="content"></div>
-    <div id="dialogs" class="hidden">
-        <div class="veil"></div>
-    </div>
-
+    <div id="main"></div>
 </body>
 </html>
