Inserting AngularJS to the project.

--- a/BooksServer/resources/views/home.html
+++ b/BooksServer/resources/views/home.html
@@ -2,6 +2,7 @@
 <html>
     <head>
         <title>Book library</title>
+        <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.14/angular.min.js"></script>
         <script src="lib/jquery-2.0.3.min.js"></script>
         <link rel="stylesheet" href="css/app.css">
         <script>
