Updating the header controller.

--- a/BooksServer/resources/views/partials/booksHeader.html
+++ b/BooksServer/resources/views/partials/booksHeader.html
@@ -1,3 +1,8 @@
-<h1>
-    The header element!!!!
-</h1>
+<div id="header" ng-controller="headerController">
+    <h1>
+        The header element!!!!
+    </h1>
+    <span>
+        {{data}}
+    </span>
+</div>
