Adding a new library menu directive.

--- a/BooksServer/resources/views/partials/booksHeader.html
+++ b/BooksServer/resources/views/partials/booksHeader.html
@@ -3,6 +3,6 @@
         The header element!!!!
     </h1>
     <span>
-        {{data}}
+        <librarymenu menuitems="pages"></librarymenu>
     </span>
 </div>
