--- a/BooksServer/resources/views/partials/booksHeader.html
+++ b/BooksServer/resources/views/partials/booksHeader.html
@@ -1,8 +1,6 @@
 <div id="header" ng-controller="headerController">
-    <h1>
-        The header element!!!!
-    </h1>
-    <span>
-        <librarymenu menuitems="pages"></librarymenu>
-    </span>
+    <div id="libraryTitle">
+        Happy library
+    </div>
+    <librarymenu menuitems="pages"></librarymenu>
 </div>
