--- a/BooksServer/resources/views/partials/library-menu.html
+++ b/BooksServer/resources/views/partials/library-menu.html
@@ -1,3 +1,5 @@
-<div ng-repeat="item in menuitems">
-    {{ item }}
+<div class="menuContainer">
+    <div ng-repeat="item in menuitems" class="menuItem">
+        {{ item }}
+    </div>
 </div>
