--- a/BooksServer/resources/views/partials/booksHeader.html
+++ b/BooksServer/resources/views/partials/booksHeader.html
@@ -1,6 +1,4 @@
 <div id="header" ng-controller="headerController">
-    <div id="libraryTitle">
-        Happy library
-    </div>
+    <div id="libraryTitle"></div>
     <librarymenu menuitems="pages"></librarymenu>
 </div>
