Created hooks for application menu and screens.

--- a/BooksServer/resources/views/partials/library-menu.html
+++ b/BooksServer/resources/views/partials/library-menu.html
@@ -1,5 +1,5 @@
-<div class="menuContainer">
+<div class="menuContainer" ng-controller="menuController">
     <div ng-repeat="item in menuitems" class="menuItem">
-        {{ item }}
+        <a ng-href="{{ item.link }}">{{ item.name }}</a>
     </div>
 </div>
