--- a/BooksServer/resources/views/home.html
+++ b/BooksServer/resources/views/home.html
@@ -23,7 +23,8 @@
     </head>
 <body>
 
-    <div id="main">
+    <div id="main" ng-controller="appModelController">
+
         <libraryheader></libraryheader>
         <div id="page" ng-view></div>
     </div>
