--- a/BooksServer/resources/views/partials/booksHeader.html
+++ b/BooksServer/resources/views/partials/booksHeader.html
@@ -1,4 +1,4 @@
-<div id="header" ng-controller="headerController">
+<div id="header">
     <div id="libraryTitle"></div>
-    <librarymenu menuitems="pages"></librarymenu>
+    <librarymenu menuitems="appPages"></librarymenu>
 </div>
