--- a/BooksServer/resources/views/partials/library-menu.html
+++ b/BooksServer/resources/views/partials/library-menu.html
@@ -1,4 +1,4 @@
-<div class="menuContainer" ng-controller="menuController">
+<div class="menuContainer">
     <div ng-repeat="item in menuitems" class="menuItem">
         <a ng-href="{{ item.link }}">{{ item.name }}</a>
     </div>
