--- a/BooksServer/resources/views/css/app.css
+++ b/BooksServer/resources/views/css/app.css
@@ -75,3 +75,8 @@ body {
     background-color: rgb(225,100,100);
     cursor: pointer;
 }
+
+.column {
+    display: inline-block ;
+    margin: 0 5px 0 5px ;
+}
