--- a/BooksServer/resources/views/home.html
+++ b/BooksServer/resources/views/home.html
@@ -26,7 +26,7 @@
     <div id="main" ng-controller="appModelController">
 
         <libraryheader></libraryheader>
-        <div id="page" ng-view></div>
+        <div id="page" data-ng-view=""></div>
     </div>
 
     <script>
