Creation of the first pages (factory) model.

--- a/BooksServer/resources/views/home.html
+++ b/BooksServer/resources/views/home.html
@@ -23,7 +23,7 @@
     </head>
 <body>
 
-    <div id="main" ng-controller="appModelController">
+    <div id="main">
 
         <libraryheader></libraryheader>
         <div id="page" data-ng-view=""></div>
