--- a/BooksServer/resources/views/partials/booksHeader.html
+++ b/BooksServer/resources/views/partials/booksHeader.html
@@ -1,4 +1,4 @@
-<div id="header">
+<div id="header" ng-controller="headerController">
     <div id="libraryTitle"></div>
     <librarymenu menuitems="appPages"></librarymenu>
 </div>
