adding a simple transition animation between the pages

--- a/BooksServer/resources/views/partials/profile.html
+++ b/BooksServer/resources/views/partials/profile.html
@@ -1,14 +1,16 @@
-<div>
-    <h2>User Profile</h2>
-    <ul>
-        <li>
-            Name: Jason Mac
-        </li>
-        <li>
-            Age: 27
-        </li>
-        <li>
-            Books lent: 3
-        </li>
-    </ul>
+<div class="page">
+    <div>
+        <h2>User Profile</h2>
+        <ul>
+            <li>
+                Name: Jason Mac
+            </li>
+            <li>
+                Age: 27
+            </li>
+            <li>
+                Books lent: 3
+            </li>
+        </ul>
+    </div>
 </div>
