--- a/BooksServer/resources/views/partials/settings.html
+++ b/BooksServer/resources/views/partials/settings.html
@@ -1,7 +1,8 @@
-<h1>Settings</h1>
-<div>
-    <table>
-        <tbody>
+<div class="page">
+    <h1>Settings</h1>
+    <div>
+        <table>
+            <tbody>
             <tr>
                 <td>
                     Notify me 1 day before lending period is over.
@@ -10,6 +11,7 @@
                     V
                 </td>
             </tr>
-        </tbody>
-    </table>
+            </tbody>
+        </table>
+    </div>
 </div>
