--- a/BooksServer/resources/views/home.html
+++ b/BooksServer/resources/views/home.html
@@ -3,6 +3,7 @@
     <head>
         <title>Book library</title>
         <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.14/angular.min.js"></script>
+        <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.2.14/angular-animate.js"></script>
         <script src="lib/angular-route.min.js"></script>
         <link rel="stylesheet" href="css/app.css">
         <script>
@@ -20,17 +21,40 @@
                 return app.auth.signinCallback(result) ;
             }
         </script>
+
+        <style type="text/css">
+            .animate.ng-enter {
+                /* standard transition code */
+                -webkit-transition: 1s linear all;
+                transition: 1s linear all;
+                opacity:0;
+            }
+
+            .animate.ng-enter-stagger {
+                /* this will have a 100ms delay between each successive leave animation */
+                -webkit-transition-delay: 0.1s;
+                transition-delay: 0.1s;
+
+                -webkit-transition-duration: 0s;
+                transition-duration: 0s;
+            }
+            .animate.ng-enter.ng-enter-active {
+                opacity: 1;
+            }
+        </style>
     </head>
 <body>
 
     <div id="main">
 
         <libraryheader></libraryheader>
-        <div id="page" data-ng-view=""></div>
+        <div class="view-container">
+            <div ng-view class="animate"></div>
+        </div>
     </div>
 
     <script>
-        var app = window.angular.module("bookapp", ['ngRoute']) ;
+        var app = window.angular.module("bookapp", ['ngRoute', 'ngAnimate']) ;
         window.getApp = function() {
             return app ;
         }
