--- a/BooksServer/resources/views/home.html
+++ b/BooksServer/resources/views/home.html
@@ -6,6 +6,7 @@
         <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.2.14/angular-animate.js"></script>
         <script src="lib/angular-route.min.js"></script>
         <link rel="stylesheet" href="css/app.css">
+        <link rel="stylesheet" href="css/app-animations.css">
         <script>
             (function init() {
                 var app = document.createElement("script") ;
@@ -21,27 +22,6 @@
                 return app.auth.signinCallback(result) ;
             }
         </script>
-
-        <style type="text/css">
-            .animate.ng-enter {
-                /* standard transition code */
-                -webkit-transition: 1s linear all;
-                transition: 1s linear all;
-                opacity:0;
-            }
-
-            .animate.ng-enter-stagger {
-                /* this will have a 100ms delay between each successive leave animation */
-                -webkit-transition-delay: 0.1s;
-                transition-delay: 0.1s;
-
-                -webkit-transition-duration: 0s;
-                transition-duration: 0s;
-            }
-            .animate.ng-enter.ng-enter-active {
-                opacity: 1;
-            }
-        </style>
     </head>
 <body>
 
