refactor of directives path

--- a/BooksServer/resources/views/partials/pages/books.html
+++ b/BooksServer/resources/views/partials/pages/books.html
@@ -8,7 +8,7 @@
     </div>
 
     <div>
-        <label>Add book</label>
+        <label>Add a book</label>
 
         <div>
             <div class="column">
