styling book directive and container

--- a/BooksServer/resources/views/partials/directives/book.html
+++ b/BooksServer/resources/views/partials/directives/book.html
@@ -1,3 +1,5 @@
-<div>
-    {{ book.name }} - {{ book.author }} / {{ book.year }}
+<div class="book">
+    <div>{{ book.name }}</div>
+    <div>{{ book.author }}</div>
+    <div>{{ book.year }}</div>
 </div>
