--- a/BooksServer/resources/views/home.html
+++ b/BooksServer/resources/views/home.html
@@ -7,6 +7,7 @@
         <script src="lib/angular-route.min.js"></script>
         <link rel="stylesheet" href="css/app.css">
         <link rel="stylesheet" href="css/app-animations.css">
+        <link rel="stylesheet" href="css/book.css">
         <script>
             (function init() {
                 var app = document.createElement("script") ;
