--- a/BooksServer/resources/views/partials/directives/book.html
+++ b/BooksServer/resources/views/partials/directives/book.html
@@ -1,5 +1,6 @@
 <div class="book">
-    <div>{{ book.name }}</div>
-    <div>{{ book.author }}</div>
-    <div>{{ book.year }}</div>
+    <div class="book-bg"></div>
+    <div class="book-title">{{ book.name }}</div>
+    <div class="book-author">{{ book.author }}</div>
+    <div class="book-year">{{ book.year }}</div>
 </div>
