--- a/BooksServer/resources/views/home.html
+++ b/BooksServer/resources/views/home.html
@@ -5,9 +5,7 @@
         <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.2.14/angular.min.js"></script>
         <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.2.14/angular-animate.js"></script>
         <script src="lib/angular-route.min.js"></script>
-        <link rel="stylesheet" href="css/app.css">
-        <link rel="stylesheet" href="css/app-animations.css">
-        <link rel="stylesheet" href="css/book.css">
+        <link rel="stylesheet" href="css/appstyles.min.css">
         <script>
             (function init() {
                 var app = document.createElement("script") ;
